force-app/main/default/objects/Custom_Sequence__mdt/Custom_Sequence__mdt.object-meta.xml
<CustomObject>
    <description>used to hold custom sequence events</description>
    <label>Custom Task Sequence</label>
    <pluralLabel>Custom Task Sequences</pluralLabel>
</CustomObject>