force-app/main/default/objects/Custom_Sequence__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>A checkbox field to determine whether the Task is active or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>