force-app/main/default/objects/Custom_Sequence__mdt/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>A Text Area (Long) where you can fill in the Task comments</description>
    <inlineHelpText>Can be used for the body of an email or text message</inlineHelpText>
    <label>Comments/Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>