force-app/main/default/objects/Custom_Sequence__mdt/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <inlineHelpText>Picklist values need to be the API name of the Contact field to reference for created task&apos;s ownership</inlineHelpText>
    <label>Owner</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OwnerId</fullName>
            </value>
            <value>
                <fullName>EC_Upsell_Opportunity_Owner__c</fullName>
                <default>true</default>
                <label>EC_Upsell_Opportunity_Owner__c</label>
            </value>
            <value>
                <fullName>Opportunity_Owner</fullName>
                <isActive>false</isActive>
                <label>Opportunity_Owner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>