force-app/main/default/objects/Custom_Sequence__mdt/fields/Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Id__c</fullName>
    <description>A Text field (18) that will be used to define the Task Record Type Id</description>
    <label>Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>