force-app/main/default/objects/Custom_Sequence__mdt/fields/Sequence_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Identifier__c</fullName>
    <description>Identifier to group the custom metadata into sequence groups</description>
    <label>Sequence Identifier</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sequence 1 - Outreach Sequence</fullName>
            </value>
            <value>
                <fullName>Sequence 2 - Placeholder</fullName>
            </value>
            <value>
                <fullName>Sequence 3 - Placeholder</fullName>
            </value>
            <value>
                <fullName>EC OBS (BW Attach): Pre-Curriculum Start Sequence</fullName>
            </value>
            <value>
                <fullName>EC OBS (BW Attach): Lessons Started Sequence</fullName>
            </value>
            <value>
                <fullName>EC OBS (EC Only): Pre-Curriculum Start Sequence</fullName>
            </value>
            <value>
                <fullName>EC OBS (EC Only): Lessons Started Sequence</fullName>
            </value>
            <value>
                <fullName>Standard OBS Sequence</fullName>
                <isActive>false</isActive>
                <label>Standard OBS Sequence</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>