force-app/main/default/objects/Custom_Sequence__mdt/fields/Sequence_Order__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number field that will be used to add or subtract the number of days from the date the Task is created</description>
    <inlineHelpText>The number of days after Enrolling in the Sequence that a Task will be due</inlineHelpText>
    <label>Sequence Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>