force-app/main/default/objects/Custom_Sequence__mdt/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>A required Text field (255) to hold the Subject of the newly created Task.</description>
    <label>Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>