force-app/main/default/objects/Custom_Sequence__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>A required Picklist field to hold the newly created Task Type</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Call - Qualifying</fullName>
                <default>true</default>
                <label>First Call - Qualifying</label>
            </value>
            <value>
                <fullName>Check-In Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Closing Call</fullName>
            </value>
            <value>
                <fullName>Onboarding Call</fullName>
            </value>
            <value>
                <fullName>Activation Call</fullName>
            </value>
            <value>
                <fullName>Cancellation Call</fullName>
            </value>
            <value>
                <fullName>Cancellation Follow-up (eFlex)</fullName>
            </value>
            <value>
                <fullName>Hubspot Form</fullName>
            </value>
            <value>
                <fullName>Marketing Email</fullName>
            </value>
            <value>
                <fullName>Yesware Email</fullName>
            </value>
            <value>
                <fullName>Outreach Activity</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Intercom Chat</fullName>
            </value>
            <value>
                <fullName>sequence_step_call</fullName>
            </value>
            <value>
                <fullName>Mobile Form</fullName>
            </value>
            <value>
                <fullName>Web Product Form</fullName>
            </value>
            <value>
                <fullName>Notification</fullName>
            </value>
            <value>
                <fullName>Outbound Email</fullName>
            </value>
            <value>
                <fullName>Message</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>